# bazel-sample

./: BUILD  Gopkg.toml  Makefile  README.md  WORKSPACE
app1/: BUILD.bazel  main.go
app2/: main.go
lib/: BUILD.bazel  hoge.go  hoge_test.go
script/: BUILD.bazel  hoge.sh
