load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/shohhei1126/bazel-sample/app1",
    visibility = ["//visibility:private"],
    deps = [
        "//lib:go_default_library",
        "//vendor/github.com/k0kubun/pp:go_default_library",
    ],
)

go_binary(
    name = "app1",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
