load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["hoge.go"],
    importpath = "github.com/shohhei1126/bazel-sample/lib",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["hoge_test.go"],
    embed = [":go_default_library"],
)
